--- a/client/index.html
+++ b/client/index.html
@@ -7,6 +7,8 @@
     <!-- build:css css/app.css -->
     <link rel="stylesheet" href="assets/lib/bootstrap/dist/css/bootstrap.css" type="text/css"/>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="assets/lib/font-awesome/css/font-awesome.css" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma" rel="stylesheet">
     <!-- endbuild -->
 </head>
 <body>
