Created list service, configured angular side

--- a/client/index.html
+++ b/client/index.html
@@ -24,6 +24,7 @@
 
 <script src="app/app.js"></script>
 <script src="app/routes.js"></script>
+<script src="app/Util/sessionService.js"></script>
 <script src="app/Homepage/homepageService.js"></script>
 <script src="app/Homepage/homepageController.js"></script>
 <!-- endbuild -->
