--- a/client/app/Homepage/homepage.html
+++ b/client/app/Homepage/homepage.html
@@ -1,6 +1,6 @@
 <div ng-controller="homepageController">
     <div class="row" style="margin-top: 15px;">
-        <div class="col-md-11">
+        <div class="col-md-10">
             <ul class="nav nav-pills pull-left">
                 <li role="presentation" class="active"><a href="#">Son güncellenen listeler</a></li>
                 <li role="presentation" ng-repeat="category in categories">
@@ -8,10 +8,12 @@
                 </li>
             </ul>
         </div>
-        <div class="col-md-1">
+        <div class="col-md-2">
             <a href="/auth/facebook" class="btn btn-primary pull-right">
-                <span class="fa fa-facebook"></span> Facebook ile giriş
+                <span ng-if="!currentUser"><span class="fa fa-facebook"></span>Facebook ile giriş</span>
+                <span ng-if="currentUser">{{userName}}</span>
             </a>
+            <button ng-if="currentUser" class="btn btn-danger pull-right" ng-click="logout()">Çıkış</button>
         </div>
     </div>
     <hr>
@@ -19,7 +21,7 @@
         <div class="col-md-3" ng-repeat="list in lists">
             <ul class="list-group">
                 <a href="#" class="list-group-item active">
-                      {{list.title}}
+                    {{list.title}}
                 </a>
                 <a href="#" class="list-group-item" ng-repeat="item in list.items">
                     <h4 class="list-group-item-heading">{{item.name}}
