Created list service, configured angular side

--- a/client/index.html
+++ b/client/index.html
@@ -28,6 +28,8 @@
 <script src="app/Util/sessionService.js"></script>
 <script src="app/Homepage/homepageService.js"></script>
 <script src="app/Homepage/homepageController.js"></script>
+<script src="app/Profile/profileService.js"></script>
+<script src="app/Profile/profileController.js"></script>
 <!-- endbuild -->
 
 </body>
