--- a/client/app/Homepage/homepage.html
+++ b/client/app/Homepage/homepage.html
@@ -9,11 +9,13 @@
             </ul>
         </div>
         <div class="col-md-2">
-            <a href="/auth/facebook" class="btn btn-primary pull-right">
-                <span ng-if="!currentUser"><span class="fa fa-facebook"></span>Facebook ile giriş</span>
-                <span ng-if="currentUser">{{userName}}</span>
+            <a ng-if="!user.isLoggedIn" href="/auth/facebook" class="btn btn-primary pull-right">
+                <span><span class="fa fa-facebook"></span>Facebook ile giriş</span>
             </a>
-            <button ng-if="currentUser" class="btn btn-danger pull-right" ng-click="logout()">Çıkış</button>
+            <a ng-if="user.isLoggedIn" ui-sref="Profile" class="btn btn-primary pull-right">
+                <span>{{user.userName}}</span>
+            </a>
+            <button ng-if="user.isLoggedIn" class="btn btn-danger pull-right" ng-click="logout()">Çıkış</button>
         </div>
     </div>
     <hr>
@@ -28,7 +30,7 @@
                         <span class="pull-right"
                               style="cursor: pointer;">
                         <i class="fa fa-heart" style="color:red"></i>
-                        {{item.like.length}}
+                        {{item.likes.length}}
                      </span>
                     </h4>
                     <p class="list-group-item-text">{{item.description}}</p>
