Created list service, configured angular side

--- a/client/app/Profile/profile.html
+++ b/client/app/Profile/profile.html
@@ -1,12 +1,16 @@
-<div class="top-buffer" ng-controller="ProfileController">
-
+<div class="top-buffer-small" ng-controller="ProfileController">
     <div class="row">
         <div class="col-md-8 col-md-offset-2 text-center">
             <img src="{{user.picture}}" class="img-circle"/>
-            <h1>Hoşgeldiniz, {{user.userName}}</h1>
+            <h1>Hoşgeldiniz, {{user.name}}</h1>
             <form class="form-inline" name="listForm">
-                <input type="text" class="form-control" name="listName" ng-model="formData.title" required>
-                <button class="btn btn-primary" ng-click="createList()" ng-disabled="listForm.listName.$invalid">Liste
+                <select class="form-control" ng-model="formData.category" required>
+                    <option value="">Kategori Seçin</option>
+                    <option ng-repeat="category in categories" value="{{category._id}}">{{category.name}}</option>
+                </select>
+                <input type="text" class="form-control" name="listName" ng-model="formData.title"
+                       placeholder="Liste Adı" required>
+                <button class="btn btn-primary" ng-click="createList()" ng-disabled="listForm.$invalid">Liste
                     Oluştur
                 </button>
             </form>
@@ -19,16 +23,18 @@
         <div class="col-md-4" ng-repeat="list in lists">
             <ul class="list-group">
                 <li class="list-group-item active">{{list.title}} -
-                    <span ng-if="list.isApproved">Onaylandı</span>
-                    <span ng-if="!list.isApproved">Onaylanmadı</span>
+                    <span class="text-success" ng-if="list.isApproved">Onaylandı</span>
+                    <span class="text-danger" ng-if="!list.isApproved">Onaylanmadı</span>
                     <span ng-click="removeList(list._id)" class="pull-right" style="cursor: pointer;">
                         <i class="fa fa-remove"></i>
-                        {{item.likes.length}}
                      </span>
                 </li>
                 <li class="list-group-item" ng-repeat="item in list.items">
                     <h5 class="list-group-item-heading">
                         <strong>{{item.name}}</strong>
+                        <span ng-if="user.isLoggedIn" class="pull-right">
+                        <i class="fa fa-check" ng-class="{'green': item.isApproved == true}"></i>
+                     </span>
                     </h5>
                     <p class="list-group-item-text">{{item.description}}</p>
                 </li>
@@ -37,14 +43,19 @@
             <form ng-submit="createItem(list._id, $index)" name="itemForm">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Bir uygulama ekleyin"
-                           ng-model="listArray[$index]" required>
+                           ng-model="listArray[$index].name" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" placeholder="Bir link ekleyin"
+                           ng-model="listArray[$index].link" required>
                 </div>
                 <div class="form-group">
                     <textarea class="form-control" placeholder="Bir açıklama ekleyin"
-                              ng-model="listFormData.description" required></textarea>
+                              ng-model="listArray[$index].description" required></textarea>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success btn-block"  ng-disabled="itemForm.$invalid">Kaydet</button>
+                    <button type="submit" class="btn btn-success btn-block" ng-disabled="itemForm.$invalid">Kaydet
+                    </button>
                 </div>
             </form>
         </div>
