--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css" type="text/css"/>
     <link rel="stylesheet" href="assets/lib/font-awesome/css/font-awesome.css" type="text/css"/>
     <!-- endbuild -->
-    <link href="https://fonts.googleapis.com/css?family=Baloo+Tamma" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
 
 </head>
 <body>
@@ -30,6 +30,10 @@
 <script src="app/Homepage/homepageController.js"></script>
 <script src="app/Profile/profileService.js"></script>
 <script src="app/Profile/profileController.js"></script>
+<script src="app/Approve/approveService.js"></script>
+<script src="app/Approve/approveController.js"></script>
+<script src="app/Category/categoryService.js"></script>
+<script src="app/Category/categoryController.js"></script>
 <!-- endbuild -->
 
 </body>
