--- a/client/app/Approve/approve.html
+++ b/client/app/Approve/approve.html
@@ -1,13 +1,14 @@
 <h1>Dashboard</h1>
 
-<div class="row" ng-controller="dashboardController">
+<div class="row" ng-controller="approveController">
     <div class="col-md-6">
         <h3>Liste oluşturma talepleri</h3>
         <table class="table table-bordered text-center" style="background-color: white">
             <tr class="bg-primary">
                 <th>Liste adı</th>
                 <th>Kategori</th>
-                <th>İşlem</th>
+                <th>Onayla</th>
+                <th>Sil</th>
             </tr>
             <tr ng-repeat="list in lists">
                 <td>{{list.title}}</td>
@@ -15,9 +16,12 @@
                 <td>
                     <button class="btn btn-success" ng-click="approveList(list._id)">Onayla</button>
                 </td>
+                <td>
+                    <button class="btn btn-danger" ng-click="removeList(list._id)">Sil</button>
+                </td>
             </tr>
             <tr ng-if="lists.length == 0">
-                <td colspan="3">Onaylanmamış liste yok</td>
+                <td colspan="4">Onaylanmamış liste yok</td>
             </tr>
         </table>
     </div>
@@ -26,20 +30,28 @@
         <table class="table table-bordered text-center" style="background-color: white">
             <tr class="bg-primary">
                 <th>Eleman adı</th>
+                <th>Açıklama</th>
+                <th>Link</th>
                 <th>Liste</th>
                 <th>Kategori</th>
-                <th>İşlem</th>
+                <th>Onayla</th>
+                <th>Sil</th>
             </tr>
             <tr ng-repeat="item in items">
                 <td>{{item.name}}</td>
+                <td>{{item.description}}</td>
+                <td>{{item.link}}</td>
                 <td>{{item.listName}}</td>
                 <td>{{item.category.name}}</td>
                 <td>
                     <button class="btn btn-success" ng-click="approveItem(item._id, item.listId)">Onayla</button>
                 </td>
+                <td>
+                    <button class="btn btn-danger" ng-click="removeItem(item.listId,item._id)">Sil</button>
+                </td>
             </tr>
             <tr ng-if="items.length == 0">
-                <td colspan="4">Onaylanmamış eleman yok</td>
+                <td colspan="7">Onaylanmamış eleman yok</td>
             </tr>
         </table>
     </div>
